# TonPlugIns

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.adoc  pre-commit.sh
.github/workflows/: build-windows.yml
cmake/: architecture.c  util.cmake
cmake/modules/: FindNVAFX.cmake  FindVSTSDK.cmake
other/: copyright.js
plugins/tonstream/source/: controller.cpp  controller.hpp  plugin.cpp  plugin.hpp  processor.cpp  processor.hpp
templates/installer/: license.rtf  vst2.iss.in  vst3.iss.in
